--- a/example/demo.ipynb
+++ b/example/demo.ipynb
@@ -856,6 +856,117 @@
     "    \"output_preview\": preview_json(response),\n",
     "}\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "14f79f6f",
+   "metadata": {},
+   "source": [
+    "The API for the translation model has been slightly modified to support concurrent calls."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "f201f684",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Time elapsed:  8.680943012237549\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[{'input': '癸卯王卜贞，旬亡祸。在十月王𰉏曰：大吉。',\n",
+       "  'output': '<think>\\n首先，我们需要识别出句子中的关键词和结构。\"癸卯王卜贞\"这部分中，\"癸卯\"是干支纪日，表示特定的日期；\"王卜贞\"表明这是商王进行的卜问，目的是贞问未来的吉凶。\\n\\n接下来，\"旬亡祸\"中的\"旬\"指的是十天一旬的时间周期；\"亡祸\"则是指没有灾祸。这部分是在询问未来的十天内是否会有灾祸发生。\\n\\n然后，\"在十月王𰉏曰\"这部分中，\"在十月\"指明了时间，即十月；\"王𰉏曰\"表示商王在观察了卜兆后作出的判断。\\n\\n最后，\"大吉\"是商王对卜兆的解释，表示非常吉利。\\n\\n综合以上分析，我们可以理解整个句子的结构和含义，即商王在癸卯日进行卜问，询问未来十天内是否有灾祸，而在十月观察卜兆后，商王判断结果为非常吉利。</think>\\n<answer>\\n癸卯日商王卜问，未来的十天一旬之内没有灾祸之事发生吧？在十月商王看了卜兆，又判断说：大大的吉利。</answer>\\n'},\n",
+       " {'input': '己卯卜王貞雀受𫲘。',\n",
+       "  'output': '<think>\\n首先，我们需要识别古文中的各个部分。\"己卯卜\"表明这是一个在己卯日进行的占卜活动。\"王貞\"指出占卜的主体是商王，他是在进行贞问。\"雀受𫲘\"这部分需要进一步解析。\"雀\"可能指的是一个贵族或官员的名字，而\"受𫲘\"可能涉及到某种仪式或行为。接下来，我们需要理解\"𫲘\"的含义，这可能是一个地名或特定的仪式名称。结合这些信息，我们可以推测这句话是在询问贵族雀是否会在己卯日进行某种与𫲘相关的仪式或行为。最后，我们需要确认整个句子的结构和逻辑关系，确保每个部分都合理且连贯。</think>\\n<answer>\\n己卯日占卜，商王问卦，贞问是贵族雀受了𫲘么？</answer>\\n'},\n",
+       " {'input': '戊申卜，㱿，贞若。',\n",
+       "  'output': '<think>\\n1. 首先，分析古文语句“戊申卜，㱿，贞若”，可以将其分解为三个部分：“戊申卜”、“㱿”和“贞若”。\\n2. “戊申卜”中的“戊申”是干支纪日，表示占卜的日期。“卜”字表示占卜行为，说明这是一次占卜活动。\\n3. “㱿”是贞人的名字，贞人是负责进行占卜和解释卜辞的官员。\\n4. “贞若”中的“贞”表示贞问，即询问神灵或祖先的意见。“若”字在这里可能表示顺若、吉利的意思，也可能是一个疑问词，表示对结果的期待。\\n5. 综合以上分析，可以推测这句古文是在描述在戊申日，贞人㱿进行了一次占卜，询问神灵或祖先关于某事的吉凶或是否顺利。</think>\\n<answer>\\n戊申日占卜，贞人㱿问卦，贞问顺若么？</answer>\\n'},\n",
+       " {'input': '贞𤰔多臣呼从沚𪭑。',\n",
+       "  'output': '<think>\\n首先，分析古文语句“贞𤰔多臣呼从沚𪭑”。其中，“贞”通常表示占卜或贞问，是古代占卜活动中常见的起始词。“𤰔”字在古代文献中较为罕见，可能是一个专有名词或地名，需要结合上下文进行理解。“多臣”可以理解为“众多的臣子”或“多位大臣”，表示数量或身份。“呼”字在古代有召唤、命令的意思，常用于君主或上级对下级的指令。“从”字通常表示跟随、率领，有带领、引导的含义。“沚𪭑”可能是一个人名或地名，具体指代需要进一步考证。\\n\\n接下来，结合这些字的含义，逐步构建语句的逻辑关系。“贞”作为起始词，表明这是一个占卜或贞问的语句。“𤰔”作为专有名词，可能是占卜的对象或地点。“多臣”作为主语，表示被命令的对象是多位大臣。“呼”作为动词，表示这些大臣被命令或召唤。“从”作为动词，表示这些大臣需要跟随或率领。“沚𪭑”作为宾语，表示行动的对象或目的地。\\n\\n最后，将这些逻辑关系整合起来，形成一个完整的语句。整个语句的结构可以理解为：在贞问或占卜的过程中，针对“𤰔”这一对象，命令“多臣”这一群体，让他们率领或跟随“沚𪭑”这一行动或人物。这一过程反映了古代占卜活动中，君主或上级通过占卜来决定行动或命令的过程。</think>\\n<answer>\\n贞问还是命令众多的臣正率领大将沚𪭑呢？</answer>\\n'}]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from openai import OpenAI\n",
+    "from openai import AsyncOpenAI\n",
+    "import json\n",
+    "import time\n",
+    "import asyncio\n",
+    "# Set OpenAI's API key and API base to use vLLM's API server.\n",
+    "openai_api_key = \"EMPTY\"\n",
+    "openai_api_base = \"http://vlrlabmonkey.xyz:10087/v1\"\n",
+    "\n",
+    "client = AsyncOpenAI(\n",
+    "    api_key=openai_api_key,\n",
+    "    base_url=openai_api_base,\n",
+    ")\n",
+    "async def generate_response(query):\n",
+    "    chat_response = await client.chat.completions.create(\n",
+    "        model=\"\",\n",
+    "        messages=[\n",
+    "            {\"role\": \"user\", \"content\": f\"请将下面的古文转为白话文:{query}\"},\n",
+    "        ],\n",
+    "        temperature=0.7,\n",
+    "        max_tokens=1024,\n",
+    "        top_p=0.8,\n",
+    "        extra_body={'top_k': 20, \"repetition_penalty\": 1.05},\n",
+    "    )\n",
+    "    return chat_response.choices[0].message.content\n",
+    "\n",
+    "data = [\n",
+    "    {\n",
+    "        \"input\": \"癸卯王卜贞，旬亡祸。在十月王𰉏曰：大吉。\"\n",
+    "    },\n",
+    "    {\n",
+    "        \"input\": \"己卯卜王貞雀受𫲘。\"\n",
+    "    },\n",
+    "    {\n",
+    "        \"input\": \"戊申卜，㱿，贞若。\"\n",
+    "    },\n",
+    "    {\n",
+    "        \"input\": \"贞𤰔多臣呼从沚𪭑。\"\n",
+    "    },\n",
+    "]\n",
+    "\n",
+    "async def fetch_multiple_completions(data):\n",
+    "    tasks = []\n",
+    "    for i in range(len(data)):\n",
+    "        temp_data=data[i]\n",
+    "        query =  temp_data[\"input\"]\n",
+    "        fanyi_sen = generate_response(query)\n",
+    "        tasks.append(fanyi_sen)\n",
+    "    \n",
+    "    # 并行执行所有任务\n",
+    "    tasks = await asyncio.gather(*tasks)\n",
+    "\n",
+    "    result = []\n",
+    "    for i in range(len(data)):\n",
+    "        temp_data=data[i]\n",
+    "        query =  temp_data[\"input\"]\n",
+    "        new_data={}\n",
+    "        new_data[\"input\"] = temp_data[\"input\"]\n",
+    "        new_data[\"output\"] = tasks[i]\n",
+    "        result.append(new_data)\n",
+    "    return result\n",
+    "\n",
+    "start = time.time()\n",
+    "result = await fetch_multiple_completions(data)\n",
+    "# If using a Python script, use the following command:\n",
+    "# result = asyncio.run(fetch_multiple_completions(data))\n",
+    "print(\"Time elapsed: \", time.time() - start)\n",
+    "\n",
+    "result"
+   ]
   }
  ],
  "metadata": {
